<resources>
    <string name="app_name">EzMess</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_registered">Not Registered</string>
    <string name="register_here">Register here</string>
    <string name="not_register">Not register ?</string>
    <string name="email">Email</string>
    <string name="already_have_an_account">already_have_an_account</string>
    <string name="login_here">Login here</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="item_2">Item 2</string>
    <string name="item_1">User details</string>
    <string name="item_3">Item 3</string>
    <string name="home">home</string>
    <string name="setting">setting</string>
    <string name="contact">contact</string>
    <string name="setting_fragment">setting_fragment</string>
</resources>
