<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">
    <!--Make Input Text-->
    <EditText
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/username" />
    <EditText
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/email" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:hint="@string/password" />
    <EditText
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:hint="@string/confirm_password" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up"/>
    <!--Create some Text-->
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/already_have_an_account" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:clickable="true"
            android:text="@string/login_here" />


    </android.support.v7.widget.LinearLayoutCompat>


</LinearLayout>